Added macro for GETIID. This is part of a bug fix for bug #39796. r=jst a=waterson